--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -24,12 +24,12 @@
 }
 
 .submit {
-  background: #1E58AC;
+  background: #1e58ac;
   padding: 8px 13px;
   color: #fff;
   font-family: 'Roboto';
   font-size: 17px;
-  border: 1px solid #1F5BB3;
+  border: 1px solid #1f5bb3;
   cursor: pointer;
 }
 
