--- a/src/components/section.css
+++ b/src/components/section.css
@@ -1,28 +1,29 @@
-.container {
-  min-height: 100vh;
-  background-size: cover;
-}
+  .container {
+    min-height: 100vh;
+    background-size: cover;
+    width: 100%;
+  }
 
-.text {
-  padding-left: 45vw;
-  padding-top: 15vh;
-}
+  .text {
+    padding-left: 45vw;
+    padding-top: 15vh;
+  }
 
-.fonts {
-  color: white;
-  font-family: 'Roboto';
-}
+  .fonts {
+    color: white;
+    font-family: 'Roboto';
+  }
 
-.title {
-  composes: fonts;
-  font-size: 3em;
-  font-weight: 300;
-  line-height: 2em;
-}
+  .title {
+    composes: fonts;
+    font-size: 3em;
+    font-weight: 300;
+    line-height: 2em;
+  }
 
-.subtitle {
-  composes: fonts;
-  font-size: 2em;
-  font-weight: 200;
-  line-height: 1em;
-}
+  .subtitle {
+    composes: fonts;
+    font-size: 2em;
+    font-weight: 200;
+    line-height: 1em;
+  }
