Change input height

--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -14,7 +14,7 @@
   font-size: 32px;
   font-family: 'Roboto';
   font-weight: 200;
-  height: auto;
+  height: 55px;
   width: 50vw;
   padding: 18px 0 16px 37px;
   box-sizing: border-box;
