--- a/src/components/section.css
+++ b/src/components/section.css
@@ -1,29 +1,5 @@
-  .container {
-    min-height: 100vh;
-    background-size: cover;
-    width: 100%;
+@media screen and (max-width: 768px) {
+  .cardMobile {
+    width: 100%
   }
-
-  .text {
-    padding-left: 45vw;
-    padding-top: 15vh;
-  }
-
-  .fonts {
-    color: white;
-    font-family: 'Roboto';
-  }
-
-  .title {
-    composes: fonts;
-    font-size: 3em;
-    font-weight: 300;
-    line-height: 2em;
-  }
-
-  .subtitle {
-    composes: fonts;
-    font-size: 2em;
-    font-weight: 200;
-    line-height: 1em;
-  }
+}
